[project]
name = "oa3capacitymanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "jupyterlab>=4.2.5",
    "jupyterlab-rise>=0.42.0",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
    "pandas>=2.2.3",
    "openai>=1.75.0",
    "tiktoken>=0.9.0",
    "devtools>=0.12.2",
    "pydantic-ai>=0.1.3",
    "pydantic>=2.11.3",
    "matplotlib>=3.10.1",
    "flask>=3.1.0",
]

